--- a/codeMinion-web/.classpath
+++ b/codeMinion-web/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/jsp/welcome.html"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
